updated navbar bg color

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-healthpocket {
   justify-content: space-between;
-  background: #f8fafa;
+  background: #c3f5f5;
 }
 
 .navbar-healthpocket .navbar-collapse {
