--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -5,31 +5,31 @@
 </div>
 
 <div>
-  <%= link_to documents_path do %>
+  <%= link_to documents_path, class: "link" do %>
     <div>
       <span class="material-symbols-outlined">clinical_notes</span>
       <p>Referral Letters</p>
     </div>
   <% end %>
-  <%= link_to documents_path do %>
+  <%= link_to documents_path, class: "link" do %>
     <div>
       <span class="material-symbols-outlined">syringe</span>
       <p>Immunization Records</p>
     </div>
   <% end %>
-  <%= link_to documents_path do %>
+  <%= link_to documents_path, class: "link" do %>
     <div>
       <span class="material-symbols-outlined">labs</span>
       <p>Pathology Records</p>
     </div>
   <% end %>
-  <%= link_to documents_path do %>
+  <%= link_to documents_path, class: "link" do %>
     <div>
       <span class="material-symbols-outlined">pill</span>
       <p>Prescription Records</p>
     </div>
   <% end %>
-  <%= link_to documents_path do %>
+  <%= link_to documents_path, class: "link" do %>
     <div>
       <span class="material-symbols-outlined">radiology</span>
       <p>Radiology Reports</p>
