Partial set-up of Cloud Vision API

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <p>Upload a Document</p>
   <%# CHANGE LINK_TO PATH %>
-  <%= link_to "Upload", documents_path, class: "button-upload" %>
+  <%= link_to "Upload", new_document_path, class: "button-upload" %>
 </div>
 
 <div>
