splash page completed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-healthpocket {
   justify-content: space-between;
-  background: #c3f5f5;
+  background:#5ABAAE;
 }
 
 .navbar-healthpocket .navbar-collapse {
@@ -9,4 +9,5 @@
 
 .navbar-healthpocket .navbar-brand img {
   width: 40px;
+  border-radius: 50px;
 }
