--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="logo-container d-flex">
+ <div class = "app-title">
+  <%= image_tag "splash_logo.png", class: "splash-logo img-fluid." %>
+  <h1 class = "title">Health Pocket<h1>
+  <p class = "app-slogan">Your health companion</p>
+  </div>
+</div>
