--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,3 +3,15 @@
   padding-top: 100px;
   overflow: hidden;
 }
+
+.login-container{
+  padding-top: 50px;
+  overflow:hidden;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .login-container {
+    padding-top: 100px;
+  }
+}
