completed main page and login page

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,5 +11,15 @@
 
   &:hover {
     color: white;
+    background: #89e2d7;
+
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .button {
+    padding: 10px 25px;
+  }
+
+
 }
