--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,52 @@
-<div class="logo-container d-flex">
- <div class = "app-title">
-  <%= image_tag "splash_logo.png", class: "splash-logo img-fluid." %>
-  <h1 class = "title">Health Pocket<h1>
-  <p class = "app-slogan">Your health companion</p>
+
+<div class="homepage-container">
+<span><h1 class = "welcome">Welcome back Sarah!<h1></span>
+<div class = "cards-wrapper">
+    <div class = "row g-1 d-flex justify-content-center">
+      <div class = "col">
+        <div class = "card home-icon-card">
+          <%= image_tag "documents.png", class: "img-fluid icon-image" %>
+          </div>
+          <p class = "card-label">Documents</p>
+      </div>
+  <div class = "col">
+    <div class = "card home-icon-card">
+        <%= image_tag "calendar.png", class: "img-fluid icon-image" %>
+      </div>
+    <p class = "card-label">Dates</p>
+</div>
+  <div class = "col">
+    <div class = "card home-icon-card">
+        <%= image_tag "world.png", class: "img-fluid icon-image" %>
+        </div>
+      <p class = "card-label">Travel Info</p>
+  </div>
+  <div class = "col">
+    <div class = "card home-icon-card">
+      <%= image_tag "tools.png", class: "img-fluid icon-image" %>
+        </div>
+        <p class = "card-label">Tools</p>
+    </div>
+  </div>
+</div>
+  <div class = "card health-card">
+    <h3 class="text-center">Health Status</h3>
+      <%= image_tag "health.png", class: "img-fluid health-card-image" %>
+      <div class = "flex-container">
+          <a class = "button">Allergies</a>
+          <p class = "health-info">Latex </p>
+      </div>
+      <div class = "flex-container">
+          <a class = "button">Medication</a>
+          <p class = "health-info">Imuran</p>
+      </div>
+      <div class = "flex-container">
+          <a class = "button">Illness</a>
+          <p class = "health-info">Anemia</p>
+      </div>
+      <div class = "flex-container">
+          <a class = "button">Hospital</a>
+          <p class = "health-info">St.Lukes</p>
+      </div>
   </div>
 </div>
