--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -9,6 +9,13 @@
   overflow:hidden;
 }
 
+.homepage-container{
+  overflow:hidden;
+  background-color:#5ABAAE ;
+  color: white;
+}
+
+
 
 @media only screen and (max-width: 600px) {
   .login-container {
