--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -3,3 +3,5 @@
   <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
   <%= f.submit "Add category", class: "btn btn-primary" %>
 <% end %>
+
+<%= @document.photo %>
