--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,4 +1,9 @@
-      <%= simple_form_for(@document) do |f| %>
-        <%= f.input :photo, as: :file %>
-        <%= f.button :submit, "Upload Document" %>
-      <% end %>
+<%= simple_form_for @document do |f| %>
+  <%= f.input :doctor_name %>
+  <%= f.input :pays, label: "Country" %>
+  <%= f.input :date, html5: true %>
+  <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
+  <%= f.input :photo, as: :file %>
+  <%= f.button :submit, "Upload Document" %>
+  <%= f.submit "Add category", class: "btn btn-primary" %>
+<% end %>
