--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,19 +1,23 @@
 .button{
-  font-family: alegreya-sans;
   padding: 15px 35px;
   border-radius: 10px;
-  background: #5ABAAE;
+  background: #5c5470;
   color: white;
   font-weight: bold;
   font-size:16px;
   text-decoration: none;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.7);
+  cursor: pointer;
 
   &:hover {
     color: white;
-    background: #89e2d7;
+    background: #918ba0;
 
   }
+}
+
+.button:active {
+  box-shadow: 0px 0px 0px #999999;
 }
 
 @media only screen and (max-width: 600px) {
