--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,3 +1,4 @@
+ <div class = "container">
 <div>
   <div>
     <% if params[:document].present? && params[:document] == "Referral Letters" %>
@@ -27,10 +28,14 @@
       <% end %>
 
     <% else %>
+
+    <div class = "upload-card mt-5">
     <div>
-      <p>Upload a Document</p>
-      <%= link_to "Upload", new_document_path, class: "button-upload" %>
+      <h5>Upload a Document</h5>
+      <%= link_to "Upload", new_document_path, class: "button" %>
+      </div>
     </div>
+    <div>
     <%= link_to documents_path(document: "Referral Letters"), class: "link" do %>
       <p><span class="material-symbols-outlined">clinical_notes</span>Referral Letters</p>
     <% end %>
@@ -61,4 +66,5 @@
   <% end %>
   <% end %>
 
+</div>
 </div>
