--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @document do |f| %>
   <%= f.input :doctor_name %>
-  <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
-  <%= f.submit "Add category", class: "btn btn-primary" %>
+  <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Update Document' %>
+  <%= f.submit "Update Document", class: "btn btn-primary" %>
 <% end %>
 
 <%= @document.photo %>
