--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,64 +1,48 @@
 <div>
-  <div>
-    <% if params[:document].present? && params[:document] == "Referral Letters" %>
-      <% @documents.each do |document| %>
-        <h1><%= document.doc_type %></h1>
-        <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
-      <% end %>
-    <% elsif params[:document].present? && params[:document] == "Immunization Records" %>
-        <h1>Immunization Records</h1>
-      <% @documents.each do |document| %>
-        <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
-      <% end %>
-    <% elsif params[:document].present? && params[:document] == "Pathology Records" %>
-      <% @documents.each do |document| %>
-        <h1><%= document.doc_type %></h1>
-        <p><%= document.date document.doctor_name document.pays %></p>
-      <% end %>
-    <% elsif params[:document].present? && params[:document] == "Prescription Records" %>
-      <% @documents.each do |document| %>
-        <h1><%= document.doc_type %></h1>
-        <p><%= document.date document.doctor_name document.pays %></p>
-      <% end %>
-    <% elsif params[:document].present? && params[:document] == "Radiology Records" %>
-      <% @documents.each do |document| %>
-        <h1><%= document.doc_type %></h1>
-        <p><%= document.date document.doctor_name document.pays %></p>
-      <% end %>
+  <% if params[:document].present? && params[:document] == "Referral Letters" %>
+    <h1>Referral Letters</h1>
+    <% @documents.each do |document| %>
+      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+    <% end %>
+  <% elsif params[:document].present? && params[:document] == "Immunization Records" %>
+    <h1>Immunization Records</h1>
+    <% @documents.each do |document| %>
+      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+    <% end %>
+  <% elsif params[:document].present? && params[:document] == "Pathology Records" %>
+    <h1>Pathology Records</h1>
+    <% @documents.each do |document| %>
+      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+    <% end %>
+  <% elsif params[:document].present? && params[:document] == "Prescription Records" %>
+    <h1>Prescription Records</h1>
+    <% @documents.each do |document| %>
+      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+    <% end %>
+  <% elsif params[:document].present? && params[:document] == "Radiology Reports" %>
+    <h1>Radiology Records</h1>
+    <% @documents.each do |document| %>
+      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+    <% end %>
 
-    <% else %>
+  <% else %>
     <div>
-      <p>Upload a Document</p>
       <%= link_to "Upload", new_document_path, class: "button-upload" %>
     </div>
     <%= link_to documents_path(document: "Referral Letters"), class: "link" do %>
-      <p><span class="material-symbols-outlined">clinical_notes</span>Referral Letters</p>
+      <p><span class="material-symbols-outlined">clinical_notes</span> Referral Letters</p>
     <% end %>
-  </div>
-  <%= link_to documents_path(document: "Immunization Records"), class: "link" do %>
-    <div>
-      <span class="material-symbols-outlined">syringe</span>
-      <p>Immunization Records</p>
-    </div>
+    <%= link_to documents_path(document: "Immunization Records"), class: "link" do %>
+      <p><span class="material-symbols-outlined">syringe</span> Immunization Records</p>
+    <% end %>
+    <%= link_to documents_path(document: "Pathology Records"), class: "link" do %>
+      <p><span class="material-symbols-outlined">labs</span> Pathology Records</p>
+    <% end %>
+    <%= link_to documents_path(document: "Prescription Records"), class: "link" do %>
+      <p><span class="material-symbols-outlined">pill</span> Prescription Records</p>
+    <% end %>
+    <%= link_to documents_path(document: "Radiology Reports"), class: "link" do %>
+      <p><span class="material-symbols-outlined">radiology</span> Radiology Reports</p>
+    <% end %>
   <% end %>
-  <%= link_to documents_path, class: "link" do %>
-    <div>
-      <span class="material-symbols-outlined">labs</span>
-      <p>Pathology Records</p>
-    </div>
-  <% end %>
-  <%= link_to documents_path, class: "link" do %>
-    <div>
-      <span class="material-symbols-outlined">pill</span>
-      <p>Prescription Records</p>
-    </div>
-  <% end %>
-  <%= link_to documents_path, class: "link" do %>
-    <div>
-      <span class="material-symbols-outlined">radiology</span>
-      <p>Radiology Reports</p>
-    </div>
-  <% end %>
-  <% end %>
-
 </div>
