Changed pays back to country

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -3,34 +3,34 @@
   <% if params[:document].present? && params[:document] == "Referral Letters" %>
     <h1>Referral Letters</h1>
     <% @documents.each do |document| %>
-      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+      <p><%= document.date %><%= document.doctor_name %><%= document.country</p> %>
     <% end %>
   <% elsif params[:document].present? && params[:document] == "Immunization Records" %>
     <h1>Immunization Records</h1>
     <% @documents.each do |document| %>
-      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+      <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
     <% end %>
   <% elsif params[:document].present? && params[:document] == "Pathology Records" %>
     <h1>Pathology Records</h1>
     <% @documents.each do |document| %>
-      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+      <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
     <% end %>
   <% elsif params[:document].present? && params[:document] == "Prescription Records" %>
     <h1>Prescription Records</h1>
     <% @documents.each do |document| %>
-      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+      <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
     <% end %>
   <% elsif params[:document].present? && params[:document] == "Radiology Reports" %>
-    <h1>Radiology Records</h1>
+    <h1>Radiology Reports</h1>
     <% @documents.each do |document| %>
-      <p><%= document.date %><%= document.doctor_name %><%= document.pays %></p>
+      <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
     <% end %>
 
     <% else %>
 
     <div class = "upload-card mt-5">
     <div>
-      <h5>Upload a Document</h5>
+      <h5>Upload Document</h5>
       <%= link_to "Upload", new_document_path, class: "button" %>
       </div>
     </div>
