--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,10 +4,12 @@
 <div class = "cards-wrapper">
     <div class = "row g-1 d-flex justify-content-center">
       <div class = "col">
+      <%= link_to documents_path do %>
         <div class = "card home-icon-card">
           <%= image_tag "documents.png", class: "img-fluid icon-image" %>
-          </div>
-          <p class = "card-label">Documents</p>
+        </div>
+      <% end %>
+        <p class = "card-label">Documents</p>
       </div>
   <div class = "col">
     <div class = "card home-icon-card">
