documents index completed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-healthpocket {
   justify-content: space-between;
-  background:#5ABAAE;
+  background: #e3e3e3;
+
 }
 
 .navbar-healthpocket .navbar-collapse {
