--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -3,6 +3,14 @@
   padding-bottom: 0px;
 }
 
+.homepage-container{
+  .button{
+    width: 130px;
+    font-size: 12px;
+    text-align: center;
+  }
+}
+
 .card-label{
   font-size :12px;
   padding-top: 10px;
@@ -36,11 +44,18 @@ ul {
 
 
 
+
 @media only screen and (max-width: 600px) {
   .health-card-image{
     height: 100px;
     width: 120px;
     margin: 0 auto;
+  }
+
+  .homepage-container{
+    .button{
+      width: 110px;
+    }
   }
 
 }
