--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -1,24 +1,41 @@
 
-
 .upload-card {
-  background:#5ABAAE ;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 250px;
   width: 300px;
   border-radius: 10px;
   box-shadow: inset;
-  padding: 60px;
   margin: 0 auto;
-  // background-image: url("../../images/upload_background.png");
-  // background-size: cover;
-  // background-position: center;
+  background-image: url("upload_background.png");
+  background-size: cover;
+  background-position: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
-  .h5 {
+  .p {
     text-align: center;
+    margin: 0;
   }
+}
 
+.upload-button{
+margin-left: 20px;
+}
+
+.document-buttons{
+  margin-top: 50px;
+}
+
+.documents-flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.document-upload-section{
+  margin: 0 auto;
+  width: 300px;
 }
 
 @media only screen and (max-width: 600px) {
