Added page title

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,3 +1,9 @@
+<h1>Translate Document</h1>
+<%= document.date %><%= document.doctor_name %><%= document.country %>
+
+
+
+
 <div class="container my-5">
   <%= @svg.html_safe %>
 </div>
