--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -5,26 +5,31 @@
         <h1>Referral Letters</h1>
         <% @referral_letters.each do |document| %>
           <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
+          <p><%= document.comment %></p>
         <% end %>
       <% elsif @immunization_records.present? %>
         <h1>Immunization Records</h1>
         <% @immunization_records.each do |document| %>
           <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
+          <p><%= document.comment %></p>
         <% end %>
       <% elsif @pathology_records.present? %>
         <h1>Pathology Records</h1>
         <% @pathology_records.each do |document| %>
           <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
+          <p><%= document.comment %></p>
         <% end %>
       <% elsif @prescription_records.present? %>
         <h1>Prescription Records</h1>
         <% @prescription_records.each do |document| %>
           <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
+          <p><%= document.comment %></p>
         <% end %>
       <% elsif @radiology_reports.present? %>
         <h1>Radiology Reports</h1>
         <% @radiology_reports.each do |document| %>
           <p><%= document.date %><%= document.doctor_name %><%= document.country %></p>
+          <p><%= document.comment %></p>
         <% end %>
       <% else %>
         <p></p>
