Added basic info for show page, added before_action in Controller

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,5 +1,8 @@
 <h1>Translate Document</h1>
-<%= document.date %><%= document.doctor_name %><%= document.country %>
+<p><%= @document.date %><%= @document.doctor_name %><%= @document.country %></p>
+<p><%= @document.comment %></p>
+<%= @document.photo.key %>
+
 
 
 
