--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -11,7 +11,7 @@
   <%= submit_tag "Translate", class: "btn btn-primary" %>
 <% end %>
 
-<%= @document.photo.key %>
+<%# <%= @document.scan %>
 
 
 
