completed show page and styles documents scanned pages

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,22 +1,20 @@
+<div class = "show-container">
 <h1>Translate Document</h1>
 <p><%= @document.date %>: Dr.<%= @document.doctor_name %> - <%= @document.country %></p>
 <p><%= @document.comment %></p>
 
 <%= form_with url: document_path(@document), method: :get, class: "d-flex" do %>
   <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Search a language"
-  %>
-  <%= submit_tag "Translate", class: "btn btn-primary" %>
+                     params[:query],
+                     class: "form-control",
+                     placeholder: "Search a language..." %>
+  <%= submit_tag "Translate", class: "button" %>
 <% end %>
 
-<%# <%= @document.scan %>
+<% # <%= @document.scan %>
 
 
-
-
-
-<div class="container my-5">
+<div class="qr-container">
   <%= @svg.html_safe %>
+</div>
 </div>
