--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -47,14 +47,42 @@ margin-left: 20px;
   align-items: center;
   margin: 1rem;
   p {
-    color:white;
+    color:#ffffff;
   }
+}
+
+
+.documents-scanned-container{
+  padding: 50px;
+
+  h1{
+    margin-top: 20px;
+    color: #ffffff;
+  }
+
+  p{
+    color: #f3efef;
+    margin-top: 30px;
+  }
+}
+
+.scanned-doc{
+  margin-left: 30px;
 }
 
 @media only screen and (max-width: 600px) {
   .upload-card{
     height: 200px;
     width: 250px;
+  }
+
+  .documents-scanned-container{
+    padding: 30px;
+
+
+    p{
+      font-size: 16px;
+    }
   }
 
 }
