--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -2,50 +2,70 @@
   <div>
     <% if params[:document].present? %>
       <% if @referral_letters.present? %>
+      <div class = "documents-scanned-container">
         <h1>Referral Letters</h1>
         <% @referral_letters.each do |document| %>
+        <div class = "documents-flex">
           <p><%= document.date %>: Dr.<%= document.doctor_name %> - <%= document.country %></p>
-          <p><%= document.comment %></p>
+          <p class = "ms-3"><%= document.comment %></p>
           <%= link_to document_path(document) do %>
-            <span class="material-symbols-outlined">description</span>
+            <span class="material-symbols-outlined scanned-doc">description</span>
           <% end %>
         <% end %>
+        </div>
+        </div>
       <% elsif @immunization_records.present? %>
+      <div class = "documents-scanned-container">
         <h1>Immunization Records</h1>
         <% @immunization_records.each do |document| %>
+          <div class = "documents-flex">
           <p><%= document.date %>: Dr.<%= document.doctor_name %> - <%= document.country %></p>
-          <p><%= document.comment %></p>
+          <p class = "ms-3"><%= document.comment %></p>
           <%= link_to document_path(document) do %>
-            <span class="material-symbols-outlined">description</span>
+            <span class="material-symbols-outlined scanned-doc">description</span>
           <% end %>
         <% end %>
+        </div>
+        </div>
       <% elsif @pathology_records.present? %>
+          <div class = "documents-scanned-container">
         <h1>Pathology Records</h1>
         <% @pathology_records.each do |document| %>
+          <div class = "documents-flex">
           <p><%= document.date %>: Dr.<%= document.doctor_name %> - <%= document.country %></p>
-          <p><%= document.comment %></p>
+          <p class = "ms-3"><%= document.comment %></p>
           <%= link_to document_path(document) do %>
-            <span class="material-symbols-outlined">description</span>
+            <span class="material-symbols-outlined scanned-doc">description</span>
           <% end %>
         <% end %>
+        </div>
+        </div>
       <% elsif @prescription_records.present? %>
+      <div class = "documents-scanned-container">
         <h1>Prescription Records</h1>
         <% @prescription_records.each do |document| %>
+         <div class = "documents-flex">
           <p><%= document.date %>: Dr.<%= document.doctor_name %> - <%= document.country %></p>
-          <p><%= document.comment %></p>
+          <p class = "ms-3"><%= document.comment %></p>
           <%= link_to document_path(document) do %>
-            <span class="material-symbols-outlined">description</span>
+            <span class="material-symbols-outlined scanned-doc">description</span>
           <% end %>
         <% end %>
+        </div>
+        </div>
       <% elsif @radiology_reports.present? %>
+      <div class = "documents-scanned-container">
         <h1>Radiology Reports</h1>
         <% @radiology_reports.each do |document| %>
+          <div class = "documents-flex">
           <p><%= document.date %>: Dr.<%= document.doctor_name %> - <%= document.country %></p>
-          <p><%= document.comment %></p>
+          <p class = "ms-3"><%= document.comment %></p>
           <%= link_to document_path(document) do %>
-            <span class="material-symbols-outlined">description</span>
+            <span class="material-symbols-outlined scanned-doc">description</span>
           <% end %>
         <% end %>
+        </div>
+        </div>
       <% else %>
         <p></p>
       <% end %>
