styled qr code and added animated toggle btn on nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
@@ -21,5 +22,5 @@
   </body>
 </html>
 
-<%# <p class="notice"><%= notice</p> %>
-<%# <p class="alert"><%= alert</p> %>
+<% # <p class="notice"><%= notice</p> %>
+<% # <p class="alert"><%= alert</p> %>
