--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,13 @@
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span>
+<lord-icon
+    src="https://cdn.lordicon.com/ynwbvguu.json"
+    trigger="hover"
+    colors="primary:#5abaae"
+    style="width:40px;height:40px">
+</lord-icon></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
