Changed Controller method

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -2,6 +2,7 @@
 <p><%= @document.date %>: Dr.<%= @document.doctor_name %> - <%= @document.country %></p>
 <p><%= @document.comment %></p>
 
+
 <%= form_with url: document_path(@document), method: :get, class: "d-flex" do %>
   <%= text_field_tag :query,
     params[:query],
@@ -10,8 +11,15 @@
   %>
   <%= submit_tag "Translate", class: "btn btn-primary" %>
 <% end %>
+<%# ORIGINAL %>
+<%= @document.doc_content %> <br>
 
-<%= @translated_doc %>
+<%# TRANSLATED TEXT %>
+<%= @translated_sentences %>
+
+
+
+
 
 <div class="container my-5">
   <%= @svg.html_safe %>
