completed basic readme for projetct and styled logout

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,3 +12,11 @@
   width: 40px;
   border-radius: 50px;
 }
+
+.dropdown-menu{
+  background:#E3E3E3;
+
+  .dropdown-item:hover{
+    color:#5ABAAE;
+  }
+}
