--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -3,14 +3,13 @@
 <p><%= @document.date %>: Dr.<%= @document.doctor_name %> - <%= @document.country %></p>
 <p><%= @document.comment %></p>
 
+<div id= "share">
+  <%= simple_form_for @document do |f| %>
+    <%= f.input :language, collection: Document::LANGUAGES, label: 'Choose a language' %>
+    <%= f.button :submit, "Share", class: "button" %>
+  <% end %>
+</div>
 
-<%= form_with url: document_path(@document), method: :get, class: "d-flex" do %>
-  <%= text_field_tag :query,
-                     params[:query],
-                     class: "form-control",
-                     placeholder: "Search a language..." %>
-  <%= submit_tag "Translate", class: "button" %>
-<% end %>
 <%# ORIGINAL %>
 <%= @document.doc_content %> <br>
 
