--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -3,12 +3,12 @@
 <p><%= @document.date %>: Dr.<%= @document.doctor_name %> - <%= @document.country %></p>
 <p><%= @document.comment %></p>
 
-<div id= "share">
-  <%= simple_form_for @document do |f| %>
-    <%= f.input :language, collection: Document::LANGUAGES, label: 'Choose a language' %>
-    <%= f.button :submit, "Share", class: "button" %>
-  <% end %>
-</div>
+<%= form_with url: document_path(@document), method: :get, class: "d-flex" do %>
+  <%= select_tag :query,
+                 options_for_select([["English", "en"], ["Japanese", "ja"], ["Spanish", "es"]], params[:query]),
+                 { include_blank: true, class: "form-control" } %>
+  <%= submit_tag "Translate", class: "button" %>
+<% end %>
 
 <%= @sentences %>
 
