--- a/app/assets/stylesheets/pages/_documents-show.scss
+++ b/app/assets/stylesheets/pages/_documents-show.scss
@@ -17,3 +17,15 @@ p{
   align-items: center;
   justify-content: center;
 }
+
+.content{
+  list-style-type: none;
+  margin-top: 30px;
+  font-size: 16px;
+  padding: 10px;
+}
+
+.uploaded-content{
+  background: #f3efef;
+  border-radius: 5px;
+}
