updated UI for share buttons and homepage card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -26,12 +26,14 @@
 }
 
 .health-card{
-  background: white;
   color: black;
   margin: 30px;
   border-radius: 10px;
   padding-top: 30px;
   padding-bottom: 30px;
+  background: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
 
   h3{
     margin-top: 30px;
