--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -10,7 +10,10 @@
   background-image: url("upload_background.png");
   background-size: cover;
   background-position: center;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+
 
   .p {
     text-align: center;
