correct translation completed

--- a/app/assets/stylesheets/pages/_documents-show.scss
+++ b/app/assets/stylesheets/pages/_documents-show.scss
@@ -19,13 +19,12 @@ p{
 }
 
 .content{
-  list-style-type: none;
-  margin-top: 30px;
   font-size: 16px;
-  padding: 10px;
+  color: black !important;
 }
 
 .uploaded-content{
+  padding: 35px;
   background: #f3efef;
   border-radius: 5px;
 }
