--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -10,8 +10,9 @@
   </head>
   <body>
     <div id="header">
-      <!--= wicked_pdf_image_tag 'thumbnail.png', height: "30", width: "auto"-->
     </div>
-    <%= yield %>
+    <% @sentences.split(",", -1).each do |sentence| %>
+      <%= sentence %>
+    <% end %>
   </body>
 </html>
