--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta name="description" content="<%= meta_description %>">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
 
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="<%= meta_title %>">
@@ -26,11 +27,12 @@
     <%= csp_meta_tag %>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 
+    <%= favicon_link_tag "favicon.png", rel: "icon", type: "image/png" %>
+    <%= render 'shared/ios_pwa_links' %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-    <%= favicon_link_tag "favicon.png", rel: "icon", type: "image/png" %>
   </head>
 
   <body>
