Localtunnel setup and commented out tags in views

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :meta_title, "#{@document.name} is on #{DEFAULT_META["meta_product_name"]}" %>
-<% content_for :meta_description, @document.description %>
-<% content_for :meta_image, cl_image_path(@document.photo.key) if @document.photo.attached? %>
+<%# <% content_for :meta_title, "#{@document.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<%# <% content_for :meta_description, @document.description %>
+<%# <% content_for :meta_image, cl_image_path(@document.photo.key) if @document.photo.attached? %>
 
 <div class = "show-container">
   <h1>Translate Document</h1>
