--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,3 +1,7 @@
+<%# <% content_for :meta_title, "#{@document.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<%# <% content_for :meta_description, @document.description %>
+<%# <% content_for :meta_image, cl_image_path(@document.photo.key) if @document.photo.attached? %>
+
 <div class="container">
   <div>
     <% if params[:document].present? %>
