Another small change

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,5 +1,5 @@
 <div class = "show-container">
-  <h1>Translate Documents</h1>
+  <h1>Translate Document</h1>
   <p><%= @document.date %>: Dr.<%= @document.doctor_name %> - <%= @document.country %></p>
   <p><%= @document.comment %></p>
 
