--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,12 +1,19 @@
 .logo-container{
-  padding: 40px;
+position: fixed;
   padding-top: 100px;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color:#fbf4f4;
 }
 
 .login-container{
   padding-top: 50px;
   overflow:hidden;
+  .animate__animated.animate__fadeIn {
+
+    --animate-delay: 2s;
+
+  }
 }
 
 .homepage-container{
