--- a/app/views/shared/_allergies.html.erb
+++ b/app/views/shared/_allergies.html.erb
@@ -1,6 +1,6 @@
 <h1>Allergies</h1>
 <div class = "container-sm p-4 mt-3">
 <%= simple_form_for @user do |f| %>
-  <%= f.input :allergies %>
+  <%= f.input :allergies, collection: Allergies::ALLERGIES, label: 'Add Allergy' %>
   <%= f.button :submit, "Submit", class: "button" %>
 <% end %>
